modificari css si infrumusetare aplicatie

--- a/index.html
+++ b/index.html
@@ -70,9 +70,7 @@
 
     <!--footer-->
     <footer class="footer">
-        <p>© 2025 WeatherApp. All rights reserved.
-            <a href="contact.html" class="contactLink">Contact</a>
-        </p>
+        <p>© 2025 WeatherApp. All rights reserved.</p>
     </footer>
 
     <!--js handling-->
