text eroare tradus in engleza

--- a/index.html
+++ b/index.html
@@ -73,7 +73,7 @@
             </div>
 
             <div class="exceptionHandling__dialog" id="errorDialog">
-                <h2 class="exceptionHandling__title" id="errorTitle">Eroare</h2>
+                <h2 class="exceptionHandling__title" id="errorTitle">Error</h2>
                 <p class="exceptionHandling__message" id="exceptionMessage"></p>
                 <button id="retryButton" class="exceptionHandling__button">Retry</button>
             </div>
